add sse handler
